src/styles/index.sass
@import './colors'
@import './functions'

body
  background-color: $white
  margin: 0
  min-width: 400px
  font-family: 'Montserrat', sans-serif
  user-select: none

*
  transition: all .35s

button
  font-family: inherit
  margin-top: 0
  margin-bottom: 0

a
  text-decoration: none
  color: inherit

  &:visited
    color: inherit

*, *::before, *::after
  box-sizing: border-box

.container
  padding-left: 20px
  padding-right: 20px
  max-width: 1920px
  margin: 0 auto
  width: 100%

  @include screen(sm)
    padding-left: 40px
    padding-right: 40px

  @include screen(md)
    padding-left: 100px
    padding-right: 100px

  @include screen(xl)
    padding-left: 200px
    padding-right: 200px

.mobile-hidden
  display: none !important

  @include screen(sm)
    display: inherit !important

.desktop-hidden
  @include screen(sm)
    display: none !important

.page404-block
  padding-top: 100px
  padding-bottom: 100px
  text-align: center
  
  

